--- a/app/src/main/res/layout/activity_welcome_screen.xml
+++ b/app/src/main/res/layout/activity_welcome_screen.xml
@@ -6,13 +6,15 @@
     android:layout_height="match_parent"
     tools:context=".WelcomeScreen">
 
-    <Button
-        android:id="@+id/button"
-        android:layout_width="216dp"
-        android:layout_height="124dp"
-        android:text="Button"
-        app:layout_constraintBottom_toBottomOf="parent"
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="96dp"
+        android:text="Your Profile"
+        android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
